elements created in the right order. Left to do, simple error handling and refactoring

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="xml">
-<body>
+    <head>
+        <title>Demo</title>
+    </head>
+    <body>
 
-    <h2>String to XML</h2>
-    <textarea id="demo"></textarea>
-    <script src="app.js"></script>
+        <h2>String to XML</h2>
+        <textarea id="demo"></textarea>
+        <script src="app.js"></script>
 
-</body>
+    </body>
 </html>
